showcase text alignment fixed in mobile view

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,11 @@ body {
 	text-transform: uppercase;
 }
 
+.showcase-container p{
+	text-align: center;
+	padding: 5px;
+}
+
 /* About Us */
 
 #about {
